@@ -32,6 +32,7 @@
 void ags_drum_input_line_class_init(AgsDrumInputLineClass *drum_input_line);
 void ags_drum_input_line_connectable_interface_init(AgsConnectableInterface *connectable);
 void ags_drum_input_line_init(AgsDrumInputLine *drum_input_line);
+void ags_drum_input_line_finalize(GObject *gobject);
 
 void ags_drum_input_line_connect(AgsConnectable *connectable);
 void ags_drum_input_line_disconnect(AgsConnectable *connectable);
@@ -99,10 +100,16 @@ ags_drum_input_line_get_type()
 void
 ags_drum_input_line_class_init(AgsDrumInputLineClass *drum_input_line)
 {
+  GObjectClass *gobject;
   AgsLineClass *line;
 
   ags_drum_input_line_parent_class = g_type_class_peek_parent(drum_input_line);
 
+  /* GObjectClass */
+  gobject = (GObjectClass *) drum_input_line;
+
+  gobject->finalize = ags_drum_input_line_finalize;
+  
   /* AgsLineClass */
   line = AGS_LINE_CLASS(drum_input_line);
 
@@ -182,6 +189,20 @@ ags_drum_input_line_init(AgsDrumInputLine *drum_input_line)
   //  g_object_set(G_OBJECT(line_member),
   //	       "port-data", (gpointer) &(GTK_RANGE(widget)->adjustment->value),
   //	       NULL);
+}
+
+void
+ags_drum_input_line_finalize(GObject *gobject)
+{
+  AgsDrumInputLine *drum_input_line;
+
+  drum_input_line = (AgsDrumInputLine *) gobject;
+
+  g_hash_table_remove(ags_line_indicator_queue_draw,
+		      drum_input_line);
+  
+  /* call parent */
+  G_OBJECT_CLASS(ags_drum_input_line_parent_class)->finalize(gobject);
 }
 
 void
